--- a/app/views/finders/_option_select_facet.html.erb
+++ b/app/views/finders/_option_select_facet.html.erb
@@ -1,11 +1,12 @@
-<%#
-  Always ensure the option-select and checkbox stylesheets are requested,
-  otherwise the helper methods to include the stylesheets are not called when
-  caching is used
+<%
+  # Always ensure the option-select and checkbox stylesheets are requested,
+  # otherwise the helper methods to include the stylesheets are not called when
+  # caching is used
+  add_gem_component_stylesheet("option-select")
+  add_gem_component_stylesheet("checkboxes")
+  index_section = index + 1
+  index_section_count = count
 %>
-<% add_gem_component_stylesheet("option-select") %>
-<% add_gem_component_stylesheet("checkboxes") %>
-
 <% cache_if option_select_facet.cacheable?, option_select_facet.cache_key do %>
   <%= render partial: 'govuk_publishing_components/components/option_select', locals: {
     :key => option_select_facet.key,
@@ -17,15 +18,15 @@
     :closed_on_load_mobile => option_select_facet.closed_on_load_mobile?,
     :show_filter => option_select_facet.show_option_select_filter,
     :large => option_select_facet.large?,
-    :data_attributes => { "ga4-change-category": "update-filter checkbox", "ga4-filter-parent": "", "ga4-section": option_select_facet.ga4_section, "ga4-index": { index_section: index + 1, index_section_count: count } },
+    :data_attributes => { "ga4-change-category": "update-filter checkbox", "ga4-filter-parent": "", "ga4-section": option_select_facet.ga4_section, "ga4-index": { index_section: index_section, index_section_count: index_section_count } },
     :button_data_attributes => {
       "ga4-expandable": "",
       "ga4-event": {
         event_name: 'select_content',
         type: 'finder',
         section: option_select_facet.name,
-        index_section: index + 1,
-        index_section_count: count
+        index_section: index_section,
+        index_section_count: index_section_count
       }
     }
   } %>
