--- a/app/views/finders/_search_results.html.erb
+++ b/app/views/finders/_search_results.html.erb
@@ -4,6 +4,7 @@
 
 <div class="finder-results js-finder-results">
   <%= render "govuk_publishing_components/components/document_list", {
+    disable_ga4: true,
     items: local_assigns[:document_list_component_data],
     remove_underline: true,
     remove_top_border_from_first_child: result_set_presenter.has_sort_options
