Add discovery_engine_attribution_token to the meta tags
Adds the discovery_engine_attribution_token from the JSON response to
meta tags and updates it whenever the page is loaded.

This new meta tag gets picked up by the [analytics code] in the
govuk_publishing_components gem and sent to Google Tag Manager.

[analytics code]: https://github.com/alphagov/govuk_publishing_components/pull/3951/files

Co-authored-by: Andy Sellick <andy.sellick@digital.cabinet-office.gov.uk>

--- a/app/views/finders/_search_results.html.erb
+++ b/app/views/finders/_search_results.html.erb
@@ -1,5 +1,8 @@
 <% content_for :head do %>
   <meta name="govuk:search-result-count" content="<%= result_set_presenter.total_count %>">
+  <% if local_assigns[:discovery_engine_attribution_token].present? %>
+    <meta name="govuk:discovery-engine-attribution-token" content="<%= local_assigns[:discovery_engine_attribution_token] %>">
+  <% end %>
 <% end %>
 
 <% if local_assigns[:debug_score] && local_assigns[:discovery_engine_attribution_token].present? %>
