Improve the spacing and alignment of search filters on mobile
* All 16px sizes increased to 19px in line with forthcoming DS changes
* Extra top padding for first filter item, previously too short
* Expander icons adjusted for better vertical alignment with text
* Consistent spacing around second bold results text
* Facets form now accounts for 2px shadow on the button

--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -46,7 +46,7 @@
 .app-c-expander__icon {
   display: none;
   position: absolute;
-  top: 0;
+  top: 3px;
   left: 9px;
   width: 30px;
   height: 40px;
