--- a/app/assets/stylesheets/components/_mobile-filters.scss
+++ b/app/assets/stylesheets/components/_mobile-filters.scss
@@ -74,7 +74,8 @@
     .facets__box {
       border-left: 5px solid #b1b4b6;
       padding-left: govuk-spacing(2);
-      margin-bottom: govuk-spacing(3);
+      padding-bottom: 2px;
+      margin-bottom: govuk-spacing(4);
     }
 
     .facets__header {
@@ -84,12 +85,16 @@
         display: grid;
         grid-auto-flow: column;
       }
+
+      .gem-c-heading {
+        @include govuk-font(19);
+      }
     }
 
     .facets__footer {
       display: block;
       margin-top: govuk_spacing(3);
-      margin-bottom: govuk_spacing(3);
+      margin-bottom: 0;
     }
 
     .facets__return-link {
@@ -109,6 +114,28 @@
     .facets__tags-block {
       display: block;
     }
+
+    // Temporary spacing fix because first item is shorter than the others
+    .facets__content > .app-c-expander:first-child {
+      padding-top: govuk-spacing(2);
+    }
+
+    // Temporary override for consistent heading sizes. Needs manual
+    // intervention in the future to determine correct approach after
+    // the design system font size changes have been rolled out.
+    .result-info__header .gem-c-heading {
+      @include govuk-font($size: 19, $weight: 700);
+    }
+
+  }
+}
+
+// The vertical position of other expander icons was fixed in _expander.scss
+// as it's app specifc. However, we also have gem expanders mixed in here
+// so these need the same override, for all breakpoints:
+.js-enabled {
+  .facets__content .gem-c-option-select__icon {
+    top: 3px;
   }
 }
 
