--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -22,7 +22,10 @@
 .govuk-frontend-supported {
   .app-c-expander__heading {
     position: relative;
-    padding: 10px 8px 5px 43px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: start;
+    align-items: center;
     margin: 0;
   }
 
@@ -45,11 +48,9 @@
 
 .app-c-expander__icon {
   display: none;
-  position: absolute;
-  top: 0;
-  left: 9px;
   width: 30px;
   height: 40px;
+  margin-inline: 9px 4px;
   fill: govuk-colour("black");
 }
 
