--- a/app/assets/stylesheets/components/_mobile-filters.scss
+++ b/app/assets/stylesheets/components/_mobile-filters.scss
@@ -74,7 +74,8 @@
     .facets__box {
       border-left: 5px solid #b1b4b6;
       padding-left: govuk-spacing(2);
-      margin-bottom: govuk-spacing(3);
+      padding-bottom: 2px;
+      margin-bottom: govuk-spacing(4);
     }
 
     .facets__header {
@@ -86,10 +87,14 @@
       }
     }
 
+    .facets__content {
+      padding-top: govuk-spacing(2);
+    }
+
     .facets__footer {
       display: block;
       margin-top: govuk_spacing(3);
-      margin-bottom: govuk_spacing(3);
+      margin-bottom: 0;
     }
 
     .facets__return-link {
