--- a/app/views/layouts/development_layout.html.erb
+++ b/app/views/layouts/development_layout.html.erb
@@ -16,6 +16,7 @@
       render_component_stylesheets
     %>
     <%= javascript_include_tag "application", integrity: false %>
+    <%= javascript_include_tag 'es6-components', integrity: false, type: "module" %>
     <meta name="robots" content="noindex">
   </head>
 
