--- a/app/views/finders/_sort_options.html.erb
+++ b/app/views/finders/_sort_options.html.erb
@@ -9,8 +9,7 @@
       id="order"
       aria-controls="js-search-results-info"
       data-default-sort-option="<%= local_assigns[:default_value] %>"
-      data-relevance-sort-option="<%= local_assigns[:relevance_value] %>"
-      data-module='track-select-change'>
+      data-relevance-sort-option="<%= local_assigns[:relevance_value] %>">
       <% local_assigns[:options].each do |option| %>
         <option
           value='<%= option[:value] %>'
