--- a/app/views/finders/_radio_facet.html.erb
+++ b/app/views/finders/_radio_facet.html.erb
@@ -1,5 +1,6 @@
 <%= tag.div(class: "facet-container", data: { "ga4-change-category": "update-filter radio", "ga4-filter-parent": radio_facet.ga4_section, "ga4-section": "", "ga4-index": { index_section: index + 1, index_section_count: count } }) do %>
   <%= render "govuk_publishing_components/components/radio", {
+    heading: radio_fact.preposition,
     name: radio_facet.key,
     small: true,
     items: radio_facet.options
