Use .govuk-frontend-supported instead of .js-enabled

--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -19,7 +19,7 @@
   }
 }
 
-.js-enabled {
+.govuk-frontend-supported {
   .app-c-expander__heading {
     position: relative;
     padding: 10px 8px 5px 43px;
