Disable corrections across search fields
As part of our work on site search, we've discovered a pain point where
mobile browsers' autocorrection features mess up user queries,
especially when it comes to domain specific terminology. For example,
searches for "HMRC" are frequently autocorrected to "Hercules", or
searches for "SORN" to "sworn".

- Set `disable_corrections` parameter for all uses of `search` component

See: https://github.com/alphagov/govuk_publishing_components/pull/4112

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -31,6 +31,7 @@
             type: 'search',
             value: result_set_presenter.user_supplied_keywords,
             on_govuk_blue: inverse,
+            disable_corrections: true,
           } %>
         </div>
         <div id="js-spelling-suggestions" class="spelling-suggestions">
