--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -14,9 +14,8 @@
 
 <%= render partial: 'before_content' %>
 
-<% if topic_finder?(filter_params) && !content_item.all_content_finder? %>
+<% if is_inverse? %>
   <% content_for :body_classes, "full-width" %>
-  <% inverse = true %>
 <% end %>
 
 <form method="get" action="<%= content_item.base_path %>" class="js-live-search-form"
@@ -24,18 +23,19 @@
 >
   <input type="hidden" name="parent" value="<%= @parent %>">
 
-  <% if topic_finder?(filter_params) && !content_item.all_content_finder? %>
+  <% if is_inverse? %>
     <%= render "govuk_publishing_components/components/inverse_header", {
-      full_width: true
+      full_width: true,
+      padding_top: false
     } do %>
       <%= render partial: 'show_header', locals: {
-        inverse: inverse,
+        inverse: is_inverse?,
         page_metadata: page_metadata(content_item, filter_params)
       } %>
     <% end %>
   <% else %>
     <%= render partial: 'show_header', locals: {
-      inverse: inverse,
+      inverse: is_inverse?,
       page_metadata: page_metadata(content_item, filter_params)
     } %>
   <% end %>
