--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -6,12 +6,14 @@
 
 <% content_for :head do %>
   <%= render 'finder_meta', content_item: content_item %>
+  <meta name="govuk:search-result-count" content="<%= result_set_presenter.total_count %>">
+  <% if result_set_presenter.discovery_engine_attribution_token %>
+    <meta name="govuk:discovery-engine-attribution-token" content="<%= result_set_presenter.discovery_engine_attribution_token %>">
+  <% end %>
 <% end %>
 <% content_for :meta_title, content_item.title %>
 
-<form method="get" action="<%= content_item.base_path %>" class="js-live-search-form"
-    data-ga4-change-category="clear-all-filters"
->
+<form method="get" action="<%= content_item.base_path %>" data-ga4-change-category="clear-all-filters">
   <%= hidden_field_tag :parent, @parent if @parent.present? %>
 
   <div class="govuk-width-container">
@@ -38,7 +40,23 @@
           } %>
         </div>
 
-        <%= render "search_results", result_set_presenter.search_results_content %>
+        <% if result_set_presenter.total_count.positive? %>
+          <%= render "govuk_publishing_components/components/document_list", {
+            disable_ga4: true,
+            items: result_set_presenter.search_results_content[:document_list_component_data],
+          } %>
+        <% else %>
+          <div class='no-results govuk-!-font-size-19'>
+            <p class='govuk-body govuk-!-font-weight-bold'>There are no matching results.</p>
+            <p class='govuk-body'>Improve your search results by:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>removing filters</li>
+              <li>double-checking your spelling</li>
+              <li>using fewer keywords</li>
+              <li>searching for something less specific</li>
+            </ul>
+          </div>
+        <% end %>
 
         <%= render "govuk_publishing_components/components/previous_and_next_navigation", @pagination.next_and_prev_links %>
       </div>
