Add spelling suggestion to new all content finder UI
- Add the existing spelling suggestion partial (as we don't need to do
  anything special compared to before)
- Update Cucumber step to check for suggestion link as regex (because
  the other feature using it additionally has a specific sort order set)

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -40,6 +40,10 @@
           } %>
         </div>
 
+        <div class="spelling-suggestions">
+          <%= render 'spelling_suggestion' %>
+        </div>
+
         <% if result_set_presenter.total_count.positive? %>
           <%= render "govuk_publishing_components/components/document_list", {
             disable_ga4: true,
