Move phase banner and breadcrumbs out of <main>
This fixes a WCAG fail since skip to main content links don’t skip straight to the main content. This fails WCAG 2.2 success criterion 2.4.1 (Bypass Blocks).

Move breadcrumbs and phase banner into a new partial that the finders layout yields before <main>. [The GOV.UK Design System documentation](<ins>https://design-system.service.gov.uk/styles/page-template/#options</ins>) calls this area of the page before the main container 'before_content' so the name of the partial aligns with that naming convention. (We yield the template in finder_layout rather than just render it, because the email alert subscriptions also use finder_layout and those pages don't include the phase banner or breadcrumbs.)

The before_content partial is rendered inside the 'show' template (instead of the 'show_header' template where the breadcrumbs and phase banner previously lived) because the breadcrumbs and phase banner are now outside the main content and not inside the content header.

--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -12,6 +12,8 @@
 
 <% content_for :meta_title, content_item.title %>
 
+<%= render partial: 'before_content' %>
+
 <% if topic_finder?(filter_params) && !content_item.all_content_finder? %>
   <% content_for :body_classes, "full-width" %>
   <% inverse = true %>
