--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -1,4 +1,7 @@
 <% content_for :body do %>
+
+  <%= yield :before_content %>
+
   <main id="content" class="finder-frontend-content">
     <div class="finder-frontend">
       <%= yield %>
