--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -44,6 +44,13 @@
           <%= render 'spelling_suggestion' %>
         </div>
 
+        <%= render "components/filter_panel", {
+          button_text: "Sort and filter",
+          result_count: result_set_presenter.total_count,
+        } do %>
+          TODO: Add filter panel content here
+        <% end %>
+
         <% if result_set_presenter.total_count.positive? %>
           <%= render "govuk_publishing_components/components/document_list", {
             disable_ga4: true,
