Add a `filter_panel` component for new UI
This adds a new app-specific component that displays a result count and
a toggleable panel of filters. This will be used for the new site search
("all content" finder) UI instead of the existing filters sidebar.

- Create `filter_panel` component
- Add (empty for now) `filter_panel` component to the (work in progress
  and hidden behind feature flag) `show_all_content_finder` view
  template

Co-authored-by: Alex Bowen <alex.bowen@digital.cabinet-office.gov.uk>

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -44,6 +44,14 @@
           <%= render 'spelling_suggestion' %>
         </div>
 
+        <%= render "components/filter_panel", {
+          button_text: "Filter and sort",
+          result_count: result_set_presenter.total_count,
+          margin_bottom: 3,
+        } do %>
+          TODO: Add filter panel content here
+        <% end %>
+
         <% if result_set_presenter.total_count.positive? %>
           <%= render "govuk_publishing_components/components/document_list", {
             disable_ga4: true,
