--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -23,18 +23,15 @@
   <div class="govuk-width-container">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <%= render "govuk_publishing_components/components/heading", {
-          text: sanitize("Search <span class='govuk-visually-hidden'>all content on</span> GOV.UK"),
-          heading_level: 1,
-          font_size: "xl",
-          margin_bottom: 4,
-        } %>
-
         <div id="keywords" role="search" aria-label="Sitewide" data-ga4-change-category="update-keyword text">
           <%= render "govuk_publishing_components/components/search_with_autocomplete", {
             id: "finder-keyword-search",
             name: "keywords",
             type: 'search',
+            label_text: sanitize("Search <span class='govuk-visually-hidden'>all content on</span> GOV.UK"),
+            wrap_label_in_a_heading: true,
+            heading_level: 1,
+            label_size: "xl",
             value: result_set_presenter.user_supplied_keywords,
             disable_corrections: true,
             source: "https://www.gov.uk/api/search.json?suggest=autocomplete",
