--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -59,6 +59,35 @@
 
           <h3 class="govuk-heading-s">Date</h3>
           <% date_facet = facets.select { _1.key == "public_timestamp" }.first %>
+          <div class="govuk-!-margin-bottom-0" id="<%= date_facet.key %>">
+            <%= render "govuk_publishing_components/components/input", {
+              label: {
+                text: date_facet.name + " after"
+              },
+              name: date_facet.key + "[from]",
+              id: date_facet.key + "[from]",
+              value: date_facet.user_supplied_from_date,
+              hint: "For example, 2005 or 21/11/2014",
+              error_message: date_facet.error_message_from(@search_query),
+              data: {
+                ga4_section: date_facet.name + " after"
+              }
+            } %>
+
+            <%= render "govuk_publishing_components/components/input", {
+              label: {
+                text: date_facet.name + " before"
+              },
+              name: date_facet.key + "[to]",
+              id: date_facet.key + "[to]",
+              value: date_facet.user_supplied_to_date,
+              hint: "For example, 2005 or 21/11/2014",
+              error_message: date_facet.error_message_to(@search_query),
+              data: {
+                ga4_section: date_facet.name + " before"
+              }
+            } %>
+          </div>
 
           <h3 class="govuk-heading-s">Topic</h3>
           <% taxon_facet = facets.select { _1.type == "taxon" }.first %>
